[WFCORE-5778] Reset 'java.security.manager' default value back to "allow" by default in launcher